REGRESSION(r261570): [GTK] Fails to send drop event to JavaScript https://bugs.webkit.org/show_bug.cgi?id=215032

Reviewed by Darin Adler.

Source/WebCore:

Add support for custom data in drag and drop operations too.

* platform/gtk/PasteboardGtk.cpp:
(WebCore::Pasteboard::write): Se custom data on m_selectionData.
(WebCore::Pasteboard::read): Initialize the content origin also for drag and drop pasteboards.
(WebCore::Pasteboard::hasData): For drag and drop pasteboards return true also if m_selectionData has custom data.
(WebCore::Pasteboard::typesSafeForBindings): Implement this for drag and drop pasteboards.
(WebCore::Pasteboard::readOrigin): Ditto.
(WebCore::Pasteboard::readStringInCustomData): Ditto.
(WebCore::Pasteboard::writeCustomData): Ditto.

Source/WebKit:

Handle custom data in drag and drop operations.

* UIProcess/API/gtk/DragSourceGtk3.cpp:
(WebKit::DragSource::DragSource):
(WebKit::DragSource::begin):
* UIProcess/API/gtk/DragSourceGtk4.cpp:
(WebKit::DragSource::begin):
* UIProcess/API/gtk/DropTargetGtk3.cpp:
(WebKit::DropTarget::DropTarget):
(WebKit::DropTarget::accept):
(WebKit::DropTarget::dataReceived):
* UIProcess/API/gtk/DropTargetGtk4.cpp:
(WebKit::DropTarget::DropTarget):
(WebKit::DropTarget::accept):

Canonical link: https://commits.webkit.org/228185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265542 268f45cc-cd09-0410-ab3c-d52691b4dbfc